--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,97 +3,106 @@
 @tailwind utilities;
 
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(150, 141, 141, 0.85);
-    display: grid;
-    place-items: center;
-    transition: var(--transition);
-    z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(150, 141, 141, 0.85);
+  display: grid;
+  place-items: center;
+  transition: var(--transition);
+  z-index: 100;
+  overflow: scroll;
 }
 
 .modal-container {
-    width: 80vw;
-    max-width: 800px;
-    height: 80vh;
-    overflow: scroll;
-    background: var(--white);
-    border-radius: var(--borderRadius);
+  width: 80vw;
+  max-width: 800px;
+  height: 80vh;
+  background: var(--white);
+  border-radius: var(--borderRadius);
 }
 
 .modal-img {
-    width: 30vh;
-    height: 15rem;
-    border-top-left-radius: var(--borderRadius);
-    border-top-right-radius: var(--borderRadius);
+  width: 30vh;
+  height: 15rem;
+  border-top-left-radius: var(--borderRadius);
+  border-top-right-radius: var(--borderRadius);
 
 }
 
 .modal-content {
-    padding: 1rem 1.5rem;
+  padding: 1rem 1.5rem;
 }
 
 .modal-content p {
-    color: var(--grey-600);
+  color: var(--grey-600);
 }
 
 .modal-content a {
-    display: block;
-    color: var(--primary-500);
-    margin-bottom: 1rem;
-    text-decoration: underline;
-    transition: var(--transition);
+  display: block;
+  color: var(--primary-500);
+  margin-bottom: 1rem;
+  text-decoration: underline;
+  transition: var(--transition);
 }
 
 .modal-content a:hover {
 
-    color: var(--black);
+  color: var(--black);
 }
 
 .close-btn {
-    background: var(--red-dark);
-    color: var(--white);
+  background: var(--red-dark);
+  color: var(--white);
 }
 
 /* Favorites */
 
-.favorites{
-    background:var(--black);
-    color:var(--white);
-    padding:1rem 0;
-  }
-  
-  .favorites-content{
-    width: var(--view-width);
-    max-width: var(--max-width);
-    margin:0 auto;
-  }
-  .favorites-container{
-    display:flex;
-    gap:0.5rem;
-    flex-wrap:wrap;
-  }
-  .favorite-item{
-    text-align:center;
-  }
-  .favorites-img{
-    width:60px;
-    border-radius:50%;
-    border:5px solid var(--white);
-    cursor:pointer;
-  }
-  .remove-btn{
-    margin-top:0.25rem;
-    background:transparent;
-    color:var(--white);
-    border:transparent;
-    cursor:pointer;
-    transition:var(--transition);
-    font-size:0.5rem;
-  }
-  .remove-btn:hover{
-    color:var(--red-dark);
-  }
+.favorites {
+  background: var(--black);
+  color: var(--white);
+  padding: 1rem 0;
+}
+
+.favorites-content {
+  width: var(--view-width);
+  max-width: var(--max-width);
+  margin: 0 auto;
+}
+
+.favorites-container {
+  display: flex;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
+
+.favorite-item {
+  text-align: center;
+}
+
+.favorites-img {
+  width: 60px;
+  border-radius: 50%;
+  border: 5px solid var(--white);
+  cursor: pointer;
+}
+
+.remove-btn {
+  margin-top: 0.25rem;
+  background: transparent;
+  color: var(--white);
+  border: transparent;
+  cursor: pointer;
+  transition: var(--transition);
+  font-size: 0.5rem;
+}
+
+.remove-btn:hover {
+  color: var(--red-dark);
+}
+
+/* .jaimin{
+  background-image: url('https://images.unsplash.com/photo-1601805215126-9df64231459b?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&dl=mojtaba-mosayebzadeh-mR_fsL-KbEg-unsplash.jpg&w=640');
+} */
