--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
   z-index: 100;
   overflow: scroll;
 }
-
+/* 
 .modal-container {
   width: 80vw;
   max-width: 800px;
@@ -56,7 +56,7 @@
 .close-btn {
   background: var(--red-dark);
   color: var(--white);
-}
+} */
 
 /* Favorites */
 
